cabal-version: 3.0
name:          grammar-grouch
version:       0.1.0.0
build-type:    Simple

executable grammar-grouch
    main-is:            Main.hs
    hs-source-dirs:     cmd
    default-language:   Haskell2010
    default-extensions:
        NoImplicitPrelude DuplicateRecordFields NamedFieldPuns
        OverloadedStrings RecordWildCards DeriveGeneric DeriveDataTypeable

    ghc-options:
        -Wall -Wincomplete-uni-patterns -Wcompat
        -Wincomplete-record-updates -Wmissing-home-modules
        -Wmissing-export-lists -Wredundant-constraints -threaded
        -with-rtsopts=-N

    build-depends:
        base >=4.12 && <4.14,
        aeson ==1.5.1.0,
        relude ==0.7.0.0,
        wreq ==0.5.3.2,
        lens ==4.19.2,
        optparse-applicative ==0.15.1.0
